wasm/fasta_rename_human_headers_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_xwb92c8x/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/ab66a9d3cfeb0a725677a09555b7e1aea6886717.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/ab66a9d3cfeb0a725677a09555b7e1aea6886717.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/199dcf2c815293fa17797c557495e46cdeadc48c.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/199dcf2c815293fa17797c557495e46cdeadc48c.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/c093cafdd13e3e57dd5f9e761203df00780f2fd2.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/c093cafdd13e3e57dd5f9e761203df00780f2fd2.json" for subsequent builds)
cache:INFO:  - ok
